--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,30 +1,35 @@
 body {
     font-family: sans-serif;
-    max-width:800px; 
-    margin:auto; 
+    margin: 0;
+    background-color: rgb(50, 50, 103);
+    color: white; /* Set all text to white */
 }
 
 nav a { 
-    margin:0 .5em;
+    margin: 0 .5em;
+    color: white;
 }
 
 table { 
-    width:100%; 
-    border-collapse:collapse; 
-    margin-top:1em; 
+    width: 50%; 
+    border-collapse: collapse; 
+    margin-top: 1em; 
+    margin: auto;
+    color: white;
 }
 
 th, td { 
-    border:1px solid #ccc; 
-    padding:.5em; 
-    text-align:left; 
+    border: 1px solid #ccc; 
+    padding: .5em; 
+    text-align: left; 
+    color: white;
 }
 
 .error { 
-    color:red; 
+    color: red; 
 }
 
-.login{
+.login {
     width: fit-content;
     margin: auto;
     padding-top: 30%;
@@ -33,4 +38,70 @@ th, td {
 .addRepForm label {
     display: block;
     margin: 25px;
+    color: white; /* Ensure form labels are white */
+}
+
+input, select, textarea {
+    color: black;
+    background-color: #fcfcfc;
+    border: 1px solid #ccc;
+    padding: 5px;
+}
+
+button {
+    cursor: pointer;
+    background-color:black;
+    border: 1px solid #ccc;
+    padding: 5px;
+    color:white;
+}
+
+.Header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.red-text {
+    color: red;
+}
+
+.custName {
+    font-weight: bold;
+}
+
+#report1,#report2, #updcredit {
+    text-align: center;
+    color: white;
+}
+#addrep{
+    text-align:left;
+    color:white;
+}
+
+h2, p {
+    margin-left: 20px;
+    color: white;
+}
+.report-2{
+justify-content: center;
+text-align: center;
+border:5px groove;
+border-radius:5px;
+width:20%;
+margin:auto;
+margin-top:20px;
+}
+.Add-rep{
+    border:groove 10px;
+    border-radius:5px;
+    width:fit-content;
+}
+.upd-credit{
+justify-content: center;
+text-align: center;
+border:5px groove;
+border-radius:5px;
+width:25%;
+margin:auto;
+margin-top:20px;
 }
