--- a/assets/styles.css
+++ b/assets/styles.css
@@ -114,11 +114,30 @@ button {
 }
 
 .upd-credit{
-justify-content: center;
-text-align: center;
-border:10px groove;
-border-radius:5px;
-width:25%;
-margin:auto;
-margin-top:20px;
+    justify-content: center;
+    text-align: center;
+    border:10px groove;
+    border-radius:5px;
+    width:25%;
+    margin:auto;
+    margin-top:20px;
+}
+
+.logout {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.logout button {
+    background-color: black;
+    color: white;
+    border: 1px white solid;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-bottom: 25px;
+}
+
+.logout button:hover {
+    background-color: #e60000;
 }
